# src/lib/api/schemas/index.ts
@@ -5,40 +5,40 @@
  * OpenAPI spec version: 0.1.0
  */
 
-export * from './bodyLoginLoginAccessToken';
-export * from './bodyLoginLoginAccessTokenClientId';
-export * from './bodyLoginLoginAccessTokenClientSecret';
-export * from './bodyLoginLoginAccessTokenGrantType';
-export * from './hTTPValidationError';
-export * from './itemCreate';
-export * from './itemCreateDescription';
-export * from './itemPublic';
-export * from './itemPublicDescription';
-export * from './itemUpdate';
-export * from './itemUpdateDescription';
-export * from './itemUpdateTitle';
-export * from './itemsPublic';
-export * from './itemsReadItemsParams';
-export * from './message';
-export * from './newPassword';
-export * from './privateUserCreate';
-export * from './token';
-export * from './updatePassword';
-export * from './userCreate';
-export * from './userCreateFullName';
-export * from './userPublic';
-export * from './userPublicFullName';
-export * from './userRegister';
-export * from './userRegisterFullName';
-export * from './userUpdate';
-export * from './userUpdateEmail';
-export * from './userUpdateFullName';
-export * from './userUpdateMe';
-export * from './userUpdateMeEmail';
-export * from './userUpdateMeFullName';
-export * from './userUpdatePassword';
-export * from './usersPublic';
-export * from './usersReadUsersParams';
-export * from './utilsTestEmailParams';
-export * from './validationError';
-export * from './validationErrorLocItem';
+export * from "./bodyLoginLoginAccessToken";
+export * from "./bodyLoginLoginAccessTokenClientId";
+export * from "./bodyLoginLoginAccessTokenClientSecret";
+export * from "./bodyLoginLoginAccessTokenGrantType";
+export * from "./hTTPValidationError";
+export * from "./itemCreate";
+export * from "./itemCreateDescription";
+export * from "./itemPublic";
+export * from "./itemPublicDescription";
+export * from "./itemUpdate";
+export * from "./itemUpdateDescription";
+export * from "./itemUpdateTitle";
+export * from "./itemsPublic";
+export * from "./itemsReadItemsParams";
+export * from "./message";
+export * from "./newPassword";
+export * from "./privateUserCreate";
+export * from "./token";
+export * from "./updatePassword";
+export * from "./userCreate";
+export * from "./userCreateFullName";
+export * from "./userPublic";
+export * from "./userPublicFullName";
+export * from "./userRegister";
+export * from "./userRegisterFullName";
+export * from "./userUpdate";
+export * from "./userUpdateEmail";
+export * from "./userUpdateFullName";
+export * from "./userUpdateMe";
+export * from "./userUpdateMeEmail";
+export * from "./userUpdateMeFullName";
+export * from "./userUpdatePassword";
+export * from "./usersPublic";
+export * from "./usersReadUsersParams";
+export * from "./utilsTestEmailParams";
+export * from "./validationError";
+export * from "./validationErrorLocItem";
